# scrab-img-from-ligthshot

./: .gitignore  README.md  core.py  https.txt  ideas.txt  other.py  project_version.json  pyproject.toml  readme.md  requirements.txt  requments.txt  scrab_ligthshow_images.py  setup.py
.github/workflows/: change_program_version.yml
.readme/: dynamic_badge.py
core/: config.py  core.py  main.py
docs/: main-bugfix.md  numeric-version.md
silf/: cli.py  main.py
src/: core.py  main.py  run.py
src/core/: __init__.py  core.py  etc.py
src/silf/: cli.py  ect.py  main.py  scrab_img_from_lightshot.py
src/tests/: test.py  test_cli.py  test_ect.py  test_etc.py  test_scrab_img_from_lightshot.py
