[tool.poetry]
name = "scrab-img-from-ligthshot"
# I want to get app verstio from there(tolm file) and insert it in badge(shield) in REAMDE FIle
version = "2.0.5"
description = "scrab images from ligthshot (i don't know is this legal)"
authors = ["ossys <ossys1010110@gmail.com>"]
readme = "README.md"
packages = [{include = "scrab_img_from_ligthshot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
fake-useragent = "^1.1.3"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
